style.css
body {
    text-align: left;
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    margin: 0;
    padding: 0;
}

h1 {
    text-align: center;
}

h2 {
    font-weight: 300;
    padding-top: 10%;
}

th {
    padding: 10px 0;
    margin: 0;
    text-align: left;
    font-weight: 500;
}

td {
    padding: 10px 0;
    width: 25%;
    text-align: left;
}

tr {
    height: 100%;
    position: relative;
}

.btn {
    /* SIZE */
    width: 12.5%;

    /* STYLE */
    font-family: 'Montserrat', sans-serif;
    font-weight: bolder;
    border-radius: 5px;
    border: 0px;
    cursor: pointer;
}

button.submit {
    background-color: rgb(125, 225, 140);
    padding: 10px 20px;
    width:fit-content;
}

button.deleteBtn {
    /* POSITIONING */
    position: absolute;
    top: 0;
    right: 0;
    margin-right: 12.5%;

    /* STYLE */
    height: 100%;
    background-color: rgb(225, 60, 95);
    color: white;
}

.btn.deleteBtn:hover {
    background-color: rgb(215, 50, 85);
}

#container {
    width: 66%;
    height: 100%;
    margin: 0 auto;
}

#content {
    width: 100%;
}

#input {
    width: 100%;
    position: relative;
    overflow: auto;
    padding-bottom: 20px;
}

label {
    float: left;
    font-weight: 500;
}

.inputElement {
    float: left;
}

#titleInput {
    width: 40%;
    padding-right: 2.5%
}

#authorInput {
    width: 40%;
    padding-right: 2.5%;
}

#statusInput {
    width: 15%;
    padding: 0;
}

.inputElement input {
    border: solid 1px gray;
    border-radius: 5px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    padding: 10px 5px 10px 5px;
    width: 100%;
    display: block;
    clear: both;
}

select {
    border: solid 1px gray;
    border-radius: 5px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    padding: 10px 0;
    width: 100%;
    display: block;
    clear: both;
}

#library {
    margin: 0 auto;
    width: 100%;
}

